# patpubrender

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
e2e/: README.md
e2e/fixtures/: US12207575-20250128.XML
e2e/python/: run.sh
e2e/rust/: run.sh
examples/: roundtrip_xml.rs
python/: Cargo.toml  README.md  build.rs  patpubrender.pyi  pyproject.toml
python/.cargo/: config.toml
python/examples/: quickstart.py
python/src/: lib.rs
src/: error.rs  extract.rs  ingest.rs  json.rs  lib.rs  shard.rs
src/model/: bibliographic.rs  claims.rs  description.rs  document.rs  mod.rs  opaque.rs  runs.rs
src/render/: biblio.rs  markdown.rs  mod.rs  template.rs
src/shard/: ingest.rs  mod.rs
src/source/: aps.rs  detect.rs  mod.rs  traits.rs  xml.rs
src/source/uspto/: application_v15.rs  application_v16.rs  application_v40.rs  application_v41.rs  application_v42.rs  application_v43.rs  application_v44.rs  application_v45.rs  application_v46.rs  application_v4x.rs  grant_v25.rs  grant_v40.rs  grant_v41.rs  grant_v42.rs  grant_v43.rs  grant_v44.rs  grant_v45.rs  grant_v46.rs  grant_v47.rs  grant_v4x.rs  mod.rs
tests/: application_number.rs  smoke_crate.rs  template.rs
