[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "patpubrender"
description = "Parse USPTO patent XML into a structured document and render Markdown."
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
readme = "README.md"
keywords = ["uspto", "patent", "xml", "markdown", "parser"]
authors = [{ name = "Jamie Noel" }]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Text Processing :: Markup",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jhnoel/patpubrender"
Repository = "https://github.com/jhnoel/patpubrender"

[tool.maturin]
# abi3 wheels: one wheel per platform works on CPython 3.9+.
features = ["pyo3/abi3-py39"]
strip = true
# A top-level patpubrender.pyi is auto-detected: maturin packages it as the
# module's __init__.pyi and adds py.typed. No explicit include needed.
